# codegg

./: .gitignore  ADDITIONAL_INTERFACES_REPORT.md  AGENTS.md  AGENTS.override.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile.aarch64-unknown-linux-gnu  LICENSE  README.md  clippy.toml  codegg.example.jsonc  codeggers.example.jsonc  plan.md  rustfmt.toml  tui.json  watch_debug.sh
.agents/: skills
.cargo/: audit.toml  config.toml
.codegg/: opencode.jsonc  sessions.db  sessions.db-shm  sessions.db-wal
.config/: nextest.toml
.opencode/: sessions.db  sessions.db-shm  sessions.db-wal
architecture/: agent.md  auth.md  bus.md  cache-aware-context.md  client.md  codegg_core.md  command.md  command_intent.md  command_planner.md  command_routing.md  compaction.md  config.md  context-ledger.md  core.md  crypto.md  deterministic_tools.md  error.md  event-bus.md  exec.md  git.md  git_phase_f_handoff.md  git_polish_verification_handoff.md  goal.md  hooks.md  human_shell.md  ide.md  identity.md  jobs.md  lsp.md  lsp_disk_cache_threat_model.md  mcp.md  memory.md  model_profile_task_state.md  native_crates.md  overview.md  permission.md  plugin.md  preflight.md  project_catalog.md  project_identity_storage.md  (+34 more)
crates/codegg-config/: Cargo.toml
crates/codegg-config/src/: encryption.rs  error.rs  lib.rs  paths.rs  schema.rs  watcher.rs
crates/codegg-core/: Cargo.toml
crates/codegg-core/fuzz/: Cargo.toml
crates/codegg-core/fuzz/fuzz_targets/: compiler_fuzz.rs  parser_fuzz.rs  roundtrip_fuzz.rs
crates/codegg-core/src/: context.rs  error.rs  identity.rs  lib.rs  migration.rs  project_catalog.rs  project_discovery.rs  project_discovery_service.rs  project_storage.rs  protocol_conversions.rs  provider_connections.rs  repository_lineage.rs  run_store.rs  workspace.rs  workspace_services.rs  worktree.rs
crates/codegg-core/src/bus/: events.rs  mod.rs
crates/codegg-core/src/goal/: checkpoint.rs  runtime.rs  store.rs
crates/codegg-core/src/jobs/: mod.rs  schedule.rs  schedule_store.rs  store.rs
crates/codegg-core/src/memory/: mod.rs
crates/codegg-core/src/model_profile/: mod.rs  policy.rs  resolve.rs  types.rs
crates/codegg-core/src/projection_replay/: artifact_registry.rs  artifacts.rs  context.rs  handle.rs  metrics.rs  mod.rs  policy.rs  publication.rs  redactor.rs  retention.rs  safe_publication.rs  seam.rs  service.rs  store.rs  subscription.rs
crates/codegg-core/src/session/: legacy_resolution.rs  mod.rs  models.rs  row.rs  schema.rs  selection_catalog.rs  state.rs  status.rs  store.rs
crates/codegg-core/src/snapshot/: mod.rs
crates/codegg-core/src/storage/: mod.rs  paths.rs  preferences.rs
crates/codegg-core/src/task_state/: mod.rs
crates/codegg-core/src/tool_program/: ast.rs  compiler.rs  content_store.rs  diagnostics.rs  guards.rs  interpreter.rs  ir.rs  ir_verifier.rs  mod.rs  parser.rs  static_bounds.rs  store.rs  validator.rs
crates/codegg-core/tests/: context.rs  identity.rs  project_catalog.rs
crates/codegg-git/: Cargo.toml
crates/codegg-git/src/: error.rs  lib.rs  operation.rs  origin.rs  parser.rs  path.rs  process_policy.rs  ref_name.rs  render.rs  risk.rs  sensitive.rs
crates/codegg-providers/: Cargo.toml
crates/codegg-providers/src/: additional.rs  anthropic.rs  auth_types.rs  azure.rs  bedrock.rs  catalog.rs  circuit.rs  cloudflare.rs  connection.rs  copilot.rs  crypto.rs  discovery.rs  eggpool.rs  error.rs  fallback.rs  gitlab.rs  google.rs  lib.rs  models.rs  openai.rs  openai_compatible.rs  opencode_zen.rs  openrouter.rs  provider_core.rs  sse_parser.rs  text_tool_parser.rs  vertex.rs
crates/egggit/: Cargo.toml
crates/egggit/src/: blame.rs  conflict.rs  diff.rs  lib.rs  log.rs  operation_state.rs  refs.rs  status.rs  status_v2.rs  worktree.rs
crates/egglsp/: Cargo.toml
crates/egglsp/src/: bridges.rs  cache.rs  capability.rs  client.rs  compatibility.rs  config.rs  context.rs  context_policy.rs  context_renderer.rs  degradation_policy.rs  diagnostics.rs  doctor.rs  document_sync.rs  download.rs  edit.rs  error.rs  evidence_adapter.rs  evidence_collector.rs  health.rs  hunk_context.rs  language.rs  launch.rs  lib.rs  operations.rs  overlay.rs  position.rs  preview_registry.rs  restart.rs  root.rs  runtime.rs  security_context.rs  semantic_context.rs  server_request.rs  service.rs  supervisor.rs  test_support.rs  tui_summary.rs  workflow_recipes.rs  writer.rs
crates/egglsp/src/operations/: code_actions.rs  completion.rs  formatting.rs  mod.rs  navigation.rs  overlay_ops.rs  rename.rs  semantic_tokens.rs  signature.rs
crates/egglsp/tests/: empty_diagnostics_readiness.rs  lsp_cache_benchmark.rs  phase6_regression.rs  production_protocol_stdio.rs  production_semantic_stdio.rs  production_service_stdio.rs  protocol_stdio.rs  real_server_smoke.rs  scenario_engine.rs  semantic_stdio.rs  supervisor_restart_stdio.rs
crates/egglsp/tests/common/: harness.rs  mod.rs  production_harness.rs  wire.rs
crates/eggsentry/: Cargo.toml
crates/eggsentry/src/: command.rs  lib.rs  profile.rs  scanner.rs
docs/: ARCHITECTURE.md  LSP.md  MCP.md  PLUGINS.md  TROUBLESHOOTING.md  execution-ownership.md  execution-ownership.toml  security-semantics.md  themes.md
examples/plugins/sdk-rust/: Cargo.toml  README.md
examples/plugins/sdk-rust/src/: abi.rs  builders.rs  lib.rs
examples/plugins/sdk-rust/tests/: sdk_smoke.rs
plans/: 000-long-term-specification.md  001-terminology-and-domain-model.md  002-long-term-roadmap.md  003-planning-process.md  README.md  agent-review.md  agent.md  agent_customization_correctness_hardening_pass.md  agent_customization_final_polish_caveats.md  agent_customization_generated_builtins_roadmap.md  agent_customization_milestone_01_asset_schema_generator.md  agent_customization_milestone_02_port_builtins.md  agent_customization_milestone_03_ci_validation.md  agent_customization_milestone_04_registry_resolution.md  agent_customization_milestone_05_user_project_agents.md  agent_customization_milestone_06_overlay_permissions.md  agent_customization_milestone_07_model_runtime_profiles.md  bus.md  (+408 more)
(+1108 files in other folders)
