[package]
name = "codegg-config"
version = "0.1.0"
edition = "2021"
description = "Configuration schema, paths, loading, and validation for codegg"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
json5 = "0.4"
thiserror = "2"
anyhow = "1"
dirs = "6"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
notify = "7"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
