[package]
name = "codegg-core"
version = "0.1.0"
edition = "2021"
description = "Core runtime, session, storage, state, and domain types for codegg"
license = "MIT"

[dependencies]
codegg-config = { path = "../codegg-config" }
codegg-git = { path = "../codegg-git" }
codegg-protocol = { path = "../codegg-protocol" }
codegg-providers = { path = "../codegg-providers" }
egggit = { path = "../egggit" }
egglsp = { path = "../egglsp" }
eggsentry = { path = "../eggsentry" }

anyhow = "1"
base64 = "0.22"
reqwest = "0.12"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
dirs = "6"
once_cell = "1"
parking_lot = "0.12"
rand = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = "3.0.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "process"] }
tokio-util = "0.7"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
futures = "0.3"
