[package]
name = "codegg-providers"
version = "0.1.0"
edition = "2021"
description = "LLM provider implementations for codegg"
license = "MIT"

[dependencies]
codegg-config = { path = "../codegg-config" }
async-trait = "0.1"
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
dashmap = "5"
hex = "0.4"
rand = "0.9"
regex = "1"
uuid = { version = "1", features = ["v4"] }

# Crypto deps (needed by auth types)
aes-gcm = "0.10"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"

# Discovery (sqlx for DB caching)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
