[package]
name = "egglsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol client extracted from Codegg."
license = "MIT"
rust-version = "1.81"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "process", "io-util", "fs"] }
url = "2"
tracing = "0.1"
lsp-types = "0.97"
zip = "2"
flate2 = "1"
tar = "0.4"
xz2 = "0.1"
walkdir = "2"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
