[package]
name = "egglsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol client extracted from Codegg."
license = "MIT"
rust-version = "1.81"

[[bin]]
name = "egglsp-test-server"
path = "src/bin/egglsp-test-server.rs"
required-features = ["lsp-test-support"]

[features]
lsp-test-support = ["dep:base64", "dep:libc"]
lsp-real-server-tests = []

[[test]]
name = "production_protocol_stdio"
path = "tests/production_protocol_stdio.rs"
required-features = ["lsp-test-support"]

[[test]]
name = "production_semantic_stdio"
path = "tests/production_semantic_stdio.rs"
required-features = ["lsp-test-support"]

[[test]]
name = "production_service_stdio"
path = "tests/production_service_stdio.rs"
required-features = ["lsp-test-support"]

[[test]]
name = "scenario_engine"
path = "tests/scenario_engine.rs"
required-features = ["lsp-test-support"]

[[test]]
name = "real_server_smoke"
path = "tests/real_server_smoke.rs"
required-features = ["lsp-real-server-tests"]

[[test]]
name = "supervisor_restart_stdio"
path = "tests/supervisor_restart_stdio.rs"
required-features = ["lsp-test-support"]

[dependencies]
base64 = { version = "0.22", optional = true }
libc = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "process", "io-util", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
url = { version = "2", features = ["serde"] }
tracing = "0.1"
lsp-types = "0.97"
zip = "2"
flate2 = "1"
tar = "0.4"
xz2 = "0.1"
walkdir = "2"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
similar = "3.0.0"
sha2 = "0.10"
futures = "0.3"
which = "7"

[dev-dependencies]
tempfile = "3"
