[package]
name = "eggsentry"
version = "0.1.0"
edition = "2021"
description = "Deterministic security scanning primitives extracted from Codegg."
license = "MIT"
rust-version = "1.81"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
