[package]
name = "codegg-plugin-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK helpers for codegg WASM plugins"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
codegg-protocol = { path = "../../../crates/codegg-protocol" }

[workspace]
